inspectorReallyUsesWebKitUserInterface should be more robust against missing files https://bugs.webkit.org/show_bug.cgi?id=85327 <rdar://problem/11332864>

Reviewed by Timothy Hatcher.

* UIProcess/mac/WebInspectorProxyMac.mm:
(WebKit::inspectorReallyUsesWebKitUserInterface):
* WebProcess/WebPage/mac/WebInspectorMac.mm:
(WebKit::inspectorReallyUsesWebKitUserInterface):

Canonical link: https://commits.webkit.org/102856@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@115770 268f45cc-cd09-0410-ab3c-d52691b4dbfc