Source/WebKit2/WebProcess/WebPage/mac/WebInspectorMac.mm
@@ -42,6 +42,9 @@ static bool inspectorReallyUsesWebKitUserInterface(bool preference)
     if (![[NSBundle bundleWithIdentifier:@"com.apple.WebInspector"] pathForResource:@"Main" ofType:@"html"])
         return true;
 
+    if (![[NSBundle bundleWithIdentifier:@"com.apple.WebCore"] pathForResource:@"inspector" ofType:@"html" inDirectory:@"inspector"])
+        return false;
+
     return preference;
 }
 
